CPP/ifceditor_v1/ifceditor/ifcengine/include/ifcengine.h

typedef	int_t			* SdaiAggr;
typedef	void			* SdaiAttr;
typedef	int_t			SdaiEntity;
typedef	int_t			SdaiInteger;
typedef	int_t			SdaiModel;
typedef	int_t			SdaiPrimitiveType;
void			DECL STDC	sdaiSaveModelAsSimpleXmlBN(
									SdaiModel				model,
									const char				* fileName
								);
static	inline	void	sdaiSaveModelAsSimpleXmlBN(
								SdaiModel				model,
								char					* fileName
							)
{
	return	sdaiSaveModelAsSimpleXmlBN(
					model,
					(const char*) fileName
				);
}
void			DECL STDC	sdaiSaveModelAsSimpleXmlBNUnicode(
									SdaiModel				model,
									const wchar_t			* fileName
								);
static	inline	void	sdaiSaveModelAsSimpleXmlBNUnicode(
								SdaiModel				model,
								wchar_t					* fileName
							)
{
	return	sdaiSaveModelAsSimpleXmlBNUnicode(
					model,
					(const wchar_t*) fileName
				);
}
void			DECL STDC	sdaiCloseModel(
									SdaiModel				model
								);
void			DECL STDC	setPrecisionDoubleExport(
									SdaiModel				model,
									int_t					precisionCap,
									int_t					precisionRound,
									bool					clean
								);
SdaiEntity		DECL STDC	sdaiGetEntity(
									SdaiModel				model,
									const char				* entityName
								);
static	inline	SdaiEntity	sdaiGetEntity(
									SdaiModel				model,
									char					* entityName
								)
{
	return	sdaiGetEntity(
					model,
					(const char*) entityName
				);
}
SdaiAttr		DECL STDC	engiGetEntityArgument(
									SdaiEntity				entity,
									const char				* argumentName
								);
static	inline	SdaiAttr	engiGetEntityArgument(
									SdaiEntity				entity,
									char					* argumentName
								)
{
	return	engiGetEntityArgument(
					entity,
					(const char*) argumentName
				);
}
int_t			DECL STDC	engiGetEntityArgumentIndex(
									SdaiEntity				entity,
									const char				* argumentName
								);
static	inline	int_t	engiGetEntityArgumentIndex(
								SdaiEntity				entity,
								char					* argumentName
							)
{
	return	engiGetEntityArgumentIndex(
					entity,
					(const char*) argumentName
				);
}
const char		DECL * STDC	engiGetEntityArgumentName(
									SdaiEntity				entity,
									SdaiInteger				index,
									SdaiPrimitiveType		valueType,
									const char				** argumentName
								);
static	inline	const char	* engiGetEntityArgumentName(
									SdaiEntity				entity,
									SdaiInteger				index,
									SdaiPrimitiveType		valueType,
									char					** argumentName
								)
{
	return	engiGetEntityArgumentName(
					entity,
					index,
					valueType,
					(const char**) argumentName
				);
}
static	inline	const char	* engiGetEntityArgumentName(
									SdaiEntity				entity,
									SdaiInteger				index,
									SdaiPrimitiveType		valueType
								)
{
	return	engiGetEntityArgumentName(
					entity,
					index,
					valueType,
					(const char**) nullptr				
				);
}
void			DECL STDC	engiGetEntityArgumentType(
									SdaiEntity				entity,
									SdaiInteger				index,
									SdaiPrimitiveType		* argumentType
								);
SdaiInteger		DECL STDC	engiGetEntityCount(
									SdaiModel				model
								);
SdaiEntity		DECL STDC	engiGetEntityElement(
									SdaiModel				model,
									SdaiInteger				index
								);
SdaiAggr		DECL STDC	sdaiGetEntityExtent(
									SdaiModel				model,
									SdaiEntity				entity
								);
SdaiAggr		DECL STDC	sdaiGetEntityExtentBN(
									SdaiModel				model,
									const char				* entityName
								);
static	inline	SdaiAggr	sdaiGetEntityExtentBN(
									SdaiModel				model,
									char					* entityName
								)
{
	return	sdaiGetEntityExtentBN(
					model,
					(const char*) entityName
				);
}
const char		DECL * STDC	engiGetEntityName(
									SdaiEntity				entity,
									SdaiPrimitiveType		valueType,
									const char				** entityName
								);
static	inline	const char	* engiGetEntityName(
									SdaiEntity				entity,
									SdaiPrimitiveType		valueType,
									char					** entityName
								)
{
	return	engiGetEntityName(
					entity,
					valueType,
					(const char**) entityName
				);
}
static	inline	const char	* engiGetEntityName(
									SdaiEntity				entity,
									SdaiPrimitiveType		valueType
								)
{
	return	engiGetEntityName(
					entity,
					valueType,
					(const char**) nullptr				
				);
}
int_t			DECL STDC	engiGetEntityNoArguments(
									SdaiEntity				entity
								);
SdaiEntity		DECL STDC	engiGetEntityParent(
									SdaiEntity				entity
								);
int_t			DECL STDC	engiGetAttrOptional(
									const SdaiAttr			attribute
								);
int_t			DECL STDC	engiGetAttrOptionalBN(
									SdaiEntity				entity,
									const char				* attributeName
								);
static	inline	int_t	engiGetAttrOptionalBN(
								SdaiEntity				entity,
								char					* attributeName
							)
{
	return	engiGetAttrOptionalBN(
					entity,
					(const char*) attributeName
				);
}
int_t			DECL STDC	engiGetAttrInverse(
									const SdaiAttr			attribute
								);
int_t			DECL STDC	engiGetAttrInverseBN(
									SdaiEntity				entity,
									const char				* attributeName
								);
static	inline	int_t	engiGetAttrInverseBN(
								SdaiEntity				entity,
								char					* attributeName
							)
{
	return	engiGetAttrInverseBN(
					entity,
					(const char*) attributeName
				);
}
const char		DECL * STDC	engiGetEnumerationValue(
									const SdaiAttr			attribute,
									SdaiInteger				index,
									SdaiPrimitiveType		valueType,
									const char				** enumerationValue
								);
static	inline	const char	* engiGetEnumerationValue(
									const SdaiAttr			attribute,
									SdaiInteger				index,
									SdaiPrimitiveType		valueType,
									char					** enumerationValue
								)
{
	return	engiGetEnumerationValue(
					attribute,
					index,
					valueType,
					(const char**) enumerationValue
				);
}
static	inline	const char	* engiGetEnumerationValue(
									const SdaiAttr			attribute,
									SdaiInteger				index,
									SdaiPrimitiveType		valueType
								)
{
	return	engiGetEnumerationValue(
					attribute,
					index,
					valueType,
					(const char**) nullptr				
				);
}
void			DECL STDC	SetSPFFHeader(
									SdaiModel				model,
									const char				* description,
									const char				* implementationLevel,
									const char				* name,
									const char				* timeStamp,
									const char				* author,
									const char				* organization,
									const char				* preprocessorVersion,
									const char				* originatingSystem,
									const char				* authorization,
									const char				* fileSchema
								);
static	inline	void	SetSPFFHeader(
								SdaiModel				model,
								char					* description,
								char					* implementationLevel,
								char					* name,
								char					* timeStamp,
								char					* author,
								char					* organization,
								char					* preprocessorVersion,
								char					* originatingSystem,
								char					* authorization,
								char					* fileSchema
							)
{
	return	SetSPFFHeader(
					model,
					(const char*) description,
					(const char*) implementationLevel,
					(const char*) name,
					(const char*) timeStamp,
					(const char*) author,
					(const char*) organization,
					(const char*) preprocessorVersion,
					(const char*) originatingSystem,
					(const char*) authorization,
					(const char*) fileSchema
				);
}
int_t			DECL STDC	SetSPFFHeaderItem(
									SdaiModel				model,
									int_t					itemIndex,
									int_t					itemSubIndex,
									SdaiPrimitiveType		valueType,
									const char				* value
								);
static	inline	int_t	SetSPFFHeaderItem(
								SdaiModel				model,
								int_t					itemIndex,
								int_t					itemSubIndex,
								SdaiPrimitiveType		valueType,
								char					* value
							)
{
	return	SetSPFFHeaderItem(
					model,
					itemIndex,
					itemSubIndex,
					valueType,
					(const char*) value
				);
}