C#/StreamingSTPInOut-CS/StreamingIFCInOut-CS/STEPEngine.cs


		//
		//		sdaiSaveModelAsSimpleXmlBN                  (http://rdf.bg/ifcdoc/CS64/sdaiSaveModelAsSimpleXmlBN.html)
		//
		//	This function saves the model as XML according to IFC4's way of XML serialization (char file name).
		//
        [DllImport(STEPEngineDLL, EntryPoint = "sdaiSaveModelAsSimpleXmlBN")]
        public static extern void sdaiSaveModelAsSimpleXmlBN(Int64 model, string fileName);

        [DllImport(STEPEngineDLL, EntryPoint = "sdaiSaveModelAsSimpleXmlBN")]
        public static extern void sdaiSaveModelAsSimpleXmlBN(Int64 model, byte[] fileName);

		//
		//		sdaiSaveModelAsSimpleXmlBNUnicode           (http://rdf.bg/ifcdoc/CS64/sdaiSaveModelAsSimpleXmlBNUnicode.html)
		//
		//	This function saves the model as XML according to IFC4's way of XML serialization (wchar, i.e. Unicode file name).
		//
        [DllImport(STEPEngineDLL, EntryPoint = "sdaiSaveModelAsSimpleXmlBNUnicode")]
        public static extern void sdaiSaveModelAsSimpleXmlBNUnicode(Int64 model, string fileName);

        [DllImport(STEPEngineDLL, EntryPoint = "sdaiSaveModelAsSimpleXmlBNUnicode")]
        public static extern void sdaiSaveModelAsSimpleXmlBNUnicode(Int64 model, byte[] fileName);

		//
		//		sdaiCloseModel                              (http://rdf.bg/ifcdoc/CS64/sdaiCloseModel.html)
		//
		//	This function closes the model. After this call no instance handles will be available including all
		//	handles referencing the geometry of this specific file, in default compilation the model itself will
		//	be known in the kernel, however known to be disabled. Calls containing the model reference will be
		//	protected from crashing when called.
		//
        [DllImport(STEPEngineDLL, EntryPoint = "sdaiCloseModel")]
        public static extern void sdaiCloseModel(Int64 model);

		//
		//		setPrecisionDoubleExport                    (http://rdf.bg/ifcdoc/CS64/setPrecisionDoubleExport.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "setPrecisionDoubleExport")]
        public static extern void setPrecisionDoubleExport(Int64 model, Int64 precisionCap, Int64 precisionRound, byte clean);

        //
        //  Schema Reading API Calls
        //

		//
		//		sdaiGetEntity                               (http://rdf.bg/ifcdoc/CS64/sdaiGetEntity.html)
		//
		//	This call retrieves a handle to an entity based on a given entity name.
		//
        [DllImport(STEPEngineDLL, EntryPoint = "sdaiGetEntity")]
        public static extern Int64 sdaiGetEntity(Int64 model, string entityName);

        [DllImport(STEPEngineDLL, EntryPoint = "sdaiGetEntity")]
        public static extern Int64 sdaiGetEntity(Int64 model, byte[] entityName);

		//
		//		engiGetEntityArgument                       (http://rdf.bg/ifcdoc/CS64/engiGetEntityArgument.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "engiGetEntityArgument")]
        public static extern Int64 engiGetEntityArgument(Int64 entity, string argumentName);

        [DllImport(STEPEngineDLL, EntryPoint = "engiGetEntityArgument")]
        public static extern Int64 engiGetEntityArgument(Int64 entity, byte[] argumentName);

		//
		//		engiGetEntityArgumentIndex                  (http://rdf.bg/ifcdoc/CS64/engiGetEntityArgumentIndex.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "engiGetEntityArgumentIndex")]
        public static extern Int64 engiGetEntityArgumentIndex(Int64 entity, string argumentName);

        [DllImport(STEPEngineDLL, EntryPoint = "engiGetEntityArgumentIndex")]
        public static extern Int64 engiGetEntityArgumentIndex(Int64 entity, byte[] argumentName);

		//
		//		engiGetEntityArgumentName                   (http://rdf.bg/ifcdoc/CS64/engiGetEntityArgumentName.html)
		//
		//	This call can be used to retrieve the name of the n-th argument of the given entity. Arguments of parent entities are included in the index. Both direct and inverse arguments are included.
		//
        [DllImport(STEPEngineDLL, EntryPoint = "engiGetEntityArgumentName")]
        public static extern void engiGetEntityArgumentName(Int64 entity, Int64 index, Int64 valueType, out IntPtr argumentName);

		//
		//		engiGetEntityArgumentType                   (http://rdf.bg/ifcdoc/CS64/engiGetEntityArgumentType.html)
		//
		//	This call can be used to retrieve the type of the n-th argument of the given entity. In case of a select argument no relevant information is given by this call as it depends on the instance. Arguments of parent entities are included in the index. Both direct and inverse arguments are included.
		//
        [DllImport(STEPEngineDLL, EntryPoint = "engiGetEntityArgumentType")]
        public static extern void engiGetEntityArgumentType(Int64 entity, Int64 index, out int_t argumentType);

		//
		//		engiGetEntityCount                          (http://rdf.bg/ifcdoc/CS64/engiGetEntityCount.html)
		//
		//	Returns the total number of entities within the loaded schema.
		//
        [DllImport(STEPEngineDLL, EntryPoint = "engiGetEntityCount")]
        public static extern Int64 engiGetEntityCount(Int64 model);

		//
		//		engiGetEntityElement                        (http://rdf.bg/ifcdoc/CS64/engiGetEntityElement.html)
		//
		//	This call returns a specific entity based on an index, the index needs to be 0 or higher but lower then the number of entities in the loaded schema.
		//
        [DllImport(STEPEngineDLL, EntryPoint = "engiGetEntityElement")]
        public static extern Int64 engiGetEntityElement(Int64 model, Int64 index);

		//
		//		sdaiGetEntityExtent                         (http://rdf.bg/ifcdoc/CS64/sdaiGetEntityExtent.html)
		//
		//	This call retrieves an aggregation that contains all instances of the entity given.
		//
        [DllImport(STEPEngineDLL, EntryPoint = "sdaiGetEntityExtent")]
        public static extern Int64 sdaiGetEntityExtent(Int64 model, Int64 entity);

		//
		//		sdaiGetEntityExtentBN                       (http://rdf.bg/ifcdoc/CS64/sdaiGetEntityExtentBN.html)
		//
		//	This call retrieves an aggregation that contains all instances of the entity given.
		//
        [DllImport(STEPEngineDLL, EntryPoint = "sdaiGetEntityExtentBN")]
        public static extern Int64 sdaiGetEntityExtentBN(Int64 model, string entityName);

        [DllImport(STEPEngineDLL, EntryPoint = "sdaiGetEntityExtentBN")]
        public static extern Int64 sdaiGetEntityExtentBN(Int64 model, byte[] entityName);

		//
		//		engiGetEntityName                           (http://rdf.bg/ifcdoc/CS64/engiGetEntityName.html)
		//
		//	This call can be used to get the name of the given entity.
		//
        [DllImport(STEPEngineDLL, EntryPoint = "engiGetEntityName")]
        public static extern void engiGetEntityName(Int64 entity, Int64 valueType, out IntPtr entityName);

		//
		//		engiGetEntityNoArguments                    (http://rdf.bg/ifcdoc/CS64/engiGetEntityNoArguments.html)
		//
		//	This call returns the number of arguments, this includes the arguments of its (nested) parents and inverse argumnets.
		//
        [DllImport(STEPEngineDLL, EntryPoint = "engiGetEntityNoArguments")]
        public static extern Int64 engiGetEntityNoArguments(Int64 entity);

		//
		//		engiGetEntityParent                         (http://rdf.bg/ifcdoc/CS64/engiGetEntityParent.html)
		//
		//	Returns the direct parent entity, for example the parent of IfcObject is IfcObjectDefinition, of IfcObjectDefinition is IfcRoot and of IfcRoot is 0.
		//
        [DllImport(STEPEngineDLL, EntryPoint = "engiGetEntityParent")]
        public static extern Int64 engiGetEntityParent(Int64 entity);

		//
		//		engiGetAttrOptional                         (http://rdf.bg/ifcdoc/CS64/engiGetAttrOptional.html)
		//
		//	This call can be used to check if an attribute is optional
		//
        [DllImport(STEPEngineDLL, EntryPoint = "engiGetAttrOptional")]
        public static extern Int64 engiGetAttrOptional(ref int_t attribute);

		//
		//		engiGetAttrOptionalBN                       (http://rdf.bg/ifcdoc/CS64/engiGetAttrOptionalBN.html)
		//
		//	This call can be used to check if an attribute is optional
		//
        [DllImport(STEPEngineDLL, EntryPoint = "engiGetAttrOptionalBN")]
        public static extern Int64 engiGetAttrOptionalBN(Int64 entity, string attributeName);

        [DllImport(STEPEngineDLL, EntryPoint = "engiGetAttrOptionalBN")]
        public static extern Int64 engiGetAttrOptionalBN(Int64 entity, byte[] attributeName);

		//
		//		engiGetAttrInverse                          (http://rdf.bg/ifcdoc/CS64/engiGetAttrInverse.html)
		//
		//	This call can be used to check if an attribute is an inverse relation
		//
        [DllImport(STEPEngineDLL, EntryPoint = "engiGetAttrInverse")]
        public static extern Int64 engiGetAttrInverse(ref int_t attribute);

		//
		//		engiGetAttrInverseBN                        (http://rdf.bg/ifcdoc/CS64/engiGetAttrInverseBN.html)
		//
		//	This call can be used to check if an attribute is an inverse relation
		//
        [DllImport(STEPEngineDLL, EntryPoint = "engiGetAttrInverseBN")]
        public static extern Int64 engiGetAttrInverseBN(Int64 entity, string attributeName);

        [DllImport(STEPEngineDLL, EntryPoint = "engiGetAttrInverseBN")]
        public static extern Int64 engiGetAttrInverseBN(Int64 entity, byte[] attributeName);

		//
		//		engiGetEnumerationValue                     (http://rdf.bg/ifcdoc/CS64/engiGetEnumerationValue.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "engiGetEnumerationValue")]
        public static extern void engiGetEnumerationValue(Int64 attribute, Int64 index, Int64 valueType, out IntPtr enumerationValue);

		//
		//		engiGetEntityProperty                       (http://rdf.bg/ifcdoc/CS64/engiGetEntityProperty.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "engiGetEntityProperty")]
        public static extern void engiGetEntityProperty(Int64 entity, Int64 index, out IntPtr propertyName, out int_t optional, out int_t type, out int_t _array, out int_t set, out int_t list, out int_t bag, out int_t min, out int_t max, out int_t referenceEntity, out int_t inverse);

        //
        //  Instance Header API Calls
        //

		//
		//		SetSPFFHeader                               (http://rdf.bg/ifcdoc/CS64/SetSPFFHeader.html)
		//
		//	This call is an aggregate of several SetSPFFHeaderItem calls. In several cases the header can be set easily with this call. In case an argument is zero, this argument will not be updated, i.e. it will not be filled with 0.
		//
        [DllImport(STEPEngineDLL, EntryPoint = "SetSPFFHeader")]
        public static extern void SetSPFFHeader(Int64 model, string description, string implementationLevel, string name, string timeStamp, string author, string organization, string preprocessorVersion, string originatingSystem, string authorization, string fileSchema);

        [DllImport(STEPEngineDLL, EntryPoint = "SetSPFFHeader")]
        public static extern void SetSPFFHeader(Int64 model, byte[] description, byte[] implementationLevel, byte[] name, byte[] timeStamp, byte[] author, byte[] organization, byte[] preprocessorVersion, byte[] originatingSystem, byte[] authorization, byte[] fileSchema);

		//
		//		SetSPFFHeaderItem                           (http://rdf.bg/ifcdoc/CS64/SetSPFFHeaderItem.html)
		//
		//	This call can be used to write a specific header item, the source code example is larger to show and explain how this call can be used.
		//
        [DllImport(STEPEngineDLL, EntryPoint = "SetSPFFHeaderItem")]
        public static extern Int64 SetSPFFHeaderItem(Int64 model, Int64 itemIndex, Int64 itemSubIndex, Int64 valueType, string value);

        [DllImport(STEPEngineDLL, EntryPoint = "SetSPFFHeaderItem")]
        public static extern Int64 SetSPFFHeaderItem(Int64 model, Int64 itemIndex, Int64 itemSubIndex, Int64 valueType, byte[] value);
